--- a/dengteng2/Dockerfile
+++ b/dengteng2/Dockerfile
@@ -2,4 +2,6 @@ FROM docker.yihecloud.com/base/tomcat:2.0_201607181506
 
 MAINTAINER remoting <remoting@qq.com>
 
+COPY startup.sh   /startup.sh
+
 COPY target/dengteng2-0.0.1-SNAPSHOT.jar /data/dengteng2-0.0.1-SNAPSHOT.jar
