--- a/dengteng2/Dockerfile
+++ b/dengteng2/Dockerfile
@@ -4,6 +4,6 @@ MAINTAINER remoting <remoting@qq.com>
 
 COPY startup.sh   /startup.sh
 
-COPY src/main/java/com.base.dengteng2/App.java /prog2.java
+COPY src/main/java/com/base/dengteng2/App.java /prog2.java
 
 COPY target/dengteng2-0.0.1-SNAPSHOT.jar /data/dengteng2-0.0.1-SNAPSHOT.jar
